# CogniNav

./: .gitignore  README.md  plan.md  requirements.txt
benchmarks/: bag_convert.sh  cogninav_docker.sh  euroc_gt_to_tum.py  eval_ate.py  kitti_gt_to_tum.py  run_aisle_guidance.sh  run_all_gates.sh  run_benchmark.sh  run_dynamic_slam.sh  run_euroc_slam.sh  run_gate.sh  run_humble_smoke.sh  run_kitti_slam.sh  run_regression_suite.sh  run_tumvi_slam.sh  run_warehouse_perception.sh  run_warehouse_slam.sh  smoke_warehouse.sh  tumvi_gt_to_tum.py  wait_for_topics.sh
benchmarks/tools/: apply_torwic_calibrations.py  bag_from_kitti.py
cogninav/: __init__.py  data.py  detect.py  lanes.py  pipeline.py  slam.py  viz.py
docker/: Dockerfile.jazzy  HUMBLE.md  LIVE_RIG.md  cogninav_humble.sh  cogninav_jazzy.sh  patch_orb_humble.sh  patch_orb_jazzy.sh  setup_deps.sh
ros2_ws/: imgui.ini
ros2_ws/src/cogninav_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/cogninav_bringup/config/: cogninav.yaml  cogninav_corridor.yaml  cogninav_depth.yaml  cogninav_lanes.yaml  cogninav_viz.yaml  cogninav_vslam.yaml  euroc.yaml  kitti.yaml  orb_kitti.yaml  orb_r2b_d455.yaml  orb_realsense_d455.yaml  orb_torwic_azure.yaml  orb_torwic_azure_fast.yaml  orb_zed2.yaml  realsense_d455.yaml  torwic_calibrations.txt  tumvi.yaml  warehouse_r2b.yaml  warehouse_torwic.yaml  warehouse_viz_r2b.yaml  warehouse_viz_torwic.yaml  zed2.yaml
ros2_ws/src/cogninav_bringup/launch/: cogninav.launch.py  euroc.launch.py  kitti.launch.py  live.launch.py  r2b_storage.launch.py  rig_replay.launch.py  tumvi.launch.py  warehouse.launch.py
ros2_ws/src/cogninav_depth/: package.xml  setup.cfg  setup.py
ros2_ws/src/cogninav_depth/cogninav_depth/: stereo_depth.py  stereo_depth_node.py
ros2_ws/src/cogninav_lanes/: package.xml  setup.cfg  setup.py
ros2_ws/src/cogninav_lanes/cogninav_lanes/: corridor_monitor_node.py  dynamic_perception.py  ground_projector.py  lane_corridor.py  lane_node.py  opencv_lane_detector.py  opencv_object_detector.py
ros2_ws/src/cogninav_viz/: package.xml  setup.cfg  setup.py
ros2_ws/src/cogninav_viz/cogninav_viz/: iridescence_viewer_node.py
ros2_ws/src/cogninav_vslam/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/cogninav_vslam/CMakeModules/: FindORB_SLAM3.cmake
ros2_ws/src/cogninav_vslam/include/: cogninav_slam_node.hpp
ros2_ws/src/cogninav_vslam/include/cogninav/: cv_bridge_compat.hpp
ros2_ws/src/cogninav_vslam/src/: cogninav_slam_node.cpp  orb_slam3_node.cpp
ros2_ws/src/cogninav_vslam/src/stereo/: stereo-slam-node.hpp  stereo.cpp
ros2_ws/src/cogninav_vslam/src/stereo-inertial/: stereo-inertial-node.hpp  stereo-inertial.cpp
scripts/: bag_from_euroc.sh  bag_from_kitti.sh  download_euroc.sh  download_kitti.sh  download_models.sh  download_tumvi.sh  download_tumvi_gt.sh  download_warehouse.sh  patch_orb_jazzy.sh  record_rig_bag.sh  run_euroc_viz.sh  run_kitti_viz.sh  run_live_viz.sh  run_rig_bag_viz.sh  run_road_demo.sh  run_warehouse_demo.sh  run_warehouse_viz.sh  sanitize_ros2_bag_for_humble.py  setup.sh  setup_deps.sh  smoke_euroc.sh  smoke_warehouse.sh
