<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cogninav_bringup</name>
  <version>0.0.1</version>
  <description>Launch files for CogniNav ORB-SLAM3 + Iridescence visualization</description>
  <maintainer email="jonathantyl97@gmail.com">jonathan-tay</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cogninav_vslam</exec_depend>
  <exec_depend>cogninav_viz</exec_depend>
  <exec_depend>cogninav_lanes</exec_depend>
  <exec_depend>cogninav_depth</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>rosbag2_storage_default_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
