<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cogninav_depth</name>
  <version>0.0.1</version>
  <description>Stereo depth estimation (OpenCV SGBM) for CogniNav</description>
  <maintainer email="jonathantyl97@gmail.com">jonathan-tay</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
