<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cogninav_vslam</name>
  <version>0.0.1</version>
  <description>ORB-SLAM3 ROS 2 wrapper for CogniNav (headless; no Pangolin viewer)</description>
  <maintainer email="jonathantyl97@gmail.com">jonathan-tay</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
